--- a/index.ipynb
+++ b/index.ipynb
@@ -81,7 +81,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sqlite"
+    "import sqlite3\n",
+    "conn = sqlite.connect()"
    ]
   },
   {
