Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -82,7 +82,7 @@
    "outputs": [],
    "source": [
     "import sqlite3\n",
-    "conn = sqlite.connect()"
+    "conn = sqlite.connect('')"
    ]
   },
   {
