Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -82,7 +82,8 @@
    "outputs": [],
    "source": [
     "import sqlite3\n",
-    "conn = sqlite.connect('babe_ruth.db')"
+    "conn = sqlite.connect('babe_ruth.db')\n",
+    "c = conn.c"
    ]
   },
   {
