Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -100,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c.execute('''from babe_ruth_stats''')"
+    "c.execute('''select years from babe_ruth_stats''')"
    ]
   },
   {
