Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -112,7 +112,7 @@
     }
    ],
    "source": [
-    "c.execute('''select count(years) from babe_ruth_stats''')"
+    "c.execute('''select count(year) from babe_ruth_stats''').fetchall()"
    ]
   },
   {
