Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -128,7 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c.execute('''select count(year) from babe_ruth_stats''').fetchall()"
+    "c.execute('''select count(year) from babe_ruth_stats where ''').fetchall()"
    ]
   },
   {
