--- a/index.ipynb
+++ b/index.ipynb
@@ -124,11 +124,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(15,)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "c.execute('''select count(year) from babe_ruth_stats where ''').fetchall()"
+    "c.execute('''select count(year) from babe_ruth_stats where team is \"NY\" ''').fetchall()"
    ]
   },
   {
