Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "c.execute('''select count(year) from babe_ruth_stats where team is \"NY\" ''').fetchall()"
    ]
   },
   {
