--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c.execute('''select * from babe_ruth_stats where  ''').fetchall()"
+    "c.execute('''select * from babe_ruth_stats where HR is max(HR) ''').fetchall()"
    ]
   },
   {
