--- a/index.ipynb
+++ b/index.ipynb
@@ -168,7 +168,7 @@
     }
    ],
    "source": [
-    "c.execute('''select * from babe_ruth_stats where HR is max(HR) ''').fetchall()"
+    "c.execute('''select * from babe_ruth_stats ''').fetchall()"
    ]
   },
   {
