Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -168,7 +168,7 @@
     }
    ],
    "source": [
-    "c.execute('''select * from babe_ruth_stats ''').fetchall()"
+    "c.execute('''select max(HR* from babe_ruth_stats ''').fetchall()"
    ]
   },
   {
