Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -152,23 +152,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "OperationalError",
-     "evalue": "misuse of aggregate function max()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mOperationalError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-e2b2cc26f283>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'''select * from babe_ruth_stats where HR is max(HR) '''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mOperationalError\u001b[0m: misuse of aggregate function max()"
-     ]
+     "data": {
+      "text/plain": [
+       "[(60,\n",
+       "  14,\n",
+       "  1927,\n",
+       "  'NY',\n",
+       "  'AL',\n",
+       "  29,\n",
+       "  8,\n",
+       "  192,\n",
+       "  60,\n",
+       "  151,\n",
+       "  158,\n",
+       "  164,\n",
+       "  540,\n",
+       "  137,\n",
+       "  7,\n",
+       "  89,\n",
+       "  0.356)]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "c.execute('''select max(HR* from babe_ruth_stats ''').fetchall()"
+    "c.execute('''select max(HR), * from babe_ruth_stats ''').fetchall()"
    ]
   },
   {
