Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -183,7 +183,7 @@
     }
    ],
    "source": [
-    "c.execute('''select max(HR), * from babe_ruth_stats ''').fetchall()"
+    "pd.DataFrame(c.execute('''select max(HR), * from babe_ruth_stats ''').fetchall())"
    ]
   },
   {
