--- a/index.ipynb
+++ b/index.ipynb
@@ -235,7 +235,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "pd.DataFrame(c.execute('''select max(HR), * from babe_ruth_stats ''').fetchall())"
+    "pd.DataFrame(c.execute('''select max(HR) from babe_ruth_stats ''').fetchall())"
    ]
   },
   {
