--- a/index.ipynb
+++ b/index.ipynb
@@ -152,90 +152,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>10</th>\n",
-       "      <th>11</th>\n",
-       "      <th>12</th>\n",
-       "      <th>13</th>\n",
-       "      <th>14</th>\n",
-       "      <th>15</th>\n",
-       "      <th>16</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>60</td>\n",
-       "      <td>14</td>\n",
-       "      <td>1927</td>\n",
-       "      <td>NY</td>\n",
-       "      <td>AL</td>\n",
-       "      <td>29</td>\n",
-       "      <td>8</td>\n",
-       "      <td>192</td>\n",
-       "      <td>60</td>\n",
-       "      <td>151</td>\n",
-       "      <td>158</td>\n",
-       "      <td>164</td>\n",
-       "      <td>540</td>\n",
-       "      <td>137</td>\n",
-       "      <td>7</td>\n",
-       "      <td>89</td>\n",
-       "      <td>0.356</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   0   1     2   3   4   5   6    7   8    9    10   11   12   13  14  15  \\\n",
-       "0  60  14  1927  NY  AL  29   8  192  60  151  158  164  540  137   7  89   \n",
-       "\n",
-       "      16  \n",
-       "0  0.356  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "OperationalError",
+     "evalue": "no such table: max",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-f548af167f4b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'''select * from max(HR) babe_ruth_stats '''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m: no such table: max"
+     ]
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "pd.DataFrame(c.execute('''select max(HR) from babe_ruth_stats ''').fetchall())"
+    "pd.DataFrame(c.execute('''select * from max(HR) babe_ruth_stats ''').fetchall())"
    ]
   },
   {
