--- a/index.ipynb
+++ b/index.ipynb
@@ -169,7 +169,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "pd.DataFrame(c.execute('''select * from max(HR) babe_ruth_stats ''').fetchall())"
+    "pd.DataFrame(c.execute('''select max(HR),  babe_ruth_stats ''').fetchall())"
    ]
   },
   {
