--- a/index.ipynb
+++ b/index.ipynb
@@ -344,7 +344,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "c.execute('''select min(HR), * from babe_ruth_stats ''').fetchall()"
    ]
   },
   {
