--- a/index.ipynb
+++ b/index.ipynb
@@ -340,11 +340,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(714,)]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "c.execute('''select min(HR), * from babe_ruth_stats ''').fetchall()"
+    "c.execute('''select sum(HR) from babe_ruth_stats ''').fetchall()"
    ]
   },
   {
