Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -372,7 +372,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "pd.DataFrame(c.execute('''select  * from babe_ruth_stats ''').fetchall())"
    ]
   },
   {
