Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -372,7 +372,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(c.execute('''select * from babe_ruth_stats where games >99''').fetchall())"
+    "pd.DataFrame(c.execute('''select * from babe_ruth_stats where games >99 order by HR asc''').fetchall())"
    ]
   },
   {
