--- a/index.ipynb
+++ b/index.ipynb
@@ -368,11 +368,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>11</th>\n",
+       "      <th>12</th>\n",
+       "      <th>13</th>\n",
+       "      <th>14</th>\n",
+       "      <th>15</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>21</td>\n",
+       "      <td>1934</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>17</td>\n",
+       "      <td>4</td>\n",
+       "      <td>105</td>\n",
+       "      <td>22</td>\n",
+       "      <td>125</td>\n",
+       "      <td>78</td>\n",
+       "      <td>84</td>\n",
+       "      <td>365</td>\n",
+       "      <td>104</td>\n",
+       "      <td>1</td>\n",
+       "      <td>63</td>\n",
+       "      <td>0.288</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>6</td>\n",
+       "      <td>1919</td>\n",
+       "      <td>BOS</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>34</td>\n",
+       "      <td>12</td>\n",
+       "      <td>139</td>\n",
+       "      <td>29</td>\n",
+       "      <td>130</td>\n",
+       "      <td>103</td>\n",
+       "      <td>114</td>\n",
+       "      <td>432</td>\n",
+       "      <td>101</td>\n",
+       "      <td>7</td>\n",
+       "      <td>58</td>\n",
+       "      <td>0.322</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20</td>\n",
+       "      <td>1933</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>21</td>\n",
+       "      <td>3</td>\n",
+       "      <td>138</td>\n",
+       "      <td>34</td>\n",
+       "      <td>137</td>\n",
+       "      <td>97</td>\n",
+       "      <td>103</td>\n",
+       "      <td>459</td>\n",
+       "      <td>114</td>\n",
+       "      <td>4</td>\n",
+       "      <td>90</td>\n",
+       "      <td>0.301</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>9</td>\n",
+       "      <td>1922</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>24</td>\n",
+       "      <td>8</td>\n",
+       "      <td>128</td>\n",
+       "      <td>35</td>\n",
+       "      <td>110</td>\n",
+       "      <td>94</td>\n",
+       "      <td>99</td>\n",
+       "      <td>406</td>\n",
+       "      <td>84</td>\n",
+       "      <td>2</td>\n",
+       "      <td>80</td>\n",
+       "      <td>0.315</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10</td>\n",
+       "      <td>1923</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>45</td>\n",
+       "      <td>13</td>\n",
+       "      <td>205</td>\n",
+       "      <td>41</td>\n",
+       "      <td>152</td>\n",
+       "      <td>151</td>\n",
+       "      <td>131</td>\n",
+       "      <td>522</td>\n",
+       "      <td>170</td>\n",
+       "      <td>17</td>\n",
+       "      <td>93</td>\n",
+       "      <td>0.393</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   0     1    2   3   4   5    6   7    8    9    10   11   12  13  14     15\n",
+       "0  21  1934   NY  AL  17   4  105  22  125   78   84  365  104   1  63  0.288\n",
+       "1   6  1919  BOS  AL  34  12  139  29  130  103  114  432  101   7  58  0.322\n",
+       "2  20  1933   NY  AL  21   3  138  34  137   97  103  459  114   4  90  0.301\n",
+       "3   9  1922   NY  AL  24   8  128  35  110   94   99  406   84   2  80  0.315\n",
+       "4  10  1923   NY  AL  45  13  205  41  152  151  131  522  170  17  93  0.393"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pd.DataFrame(c.execute('''select * from babe_ruth_stats where games >99 order by HR asc''').fetchall())"
+    "pd.DataFrame(c.execute('''select * from babe_ruth_stats where games >99 order by HR asc limit 5''').fetchall())"
    ]
   },
   {
