Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -525,7 +525,8 @@
     }
    ],
    "source": [
-    "df = pd.DataFrame(c.execute('''select * from babe_ruth_stats where games >99 order by HR asc limit 5''').fetchall())"
+    "df = pd.DataFrame(c.execute('''select * from babe_ruth_stats where games >99 order by HR asc limit 5''').fetchall())\n",
+    "df.columns = []"
    ]
   },
   {
