Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -551,7 +551,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c.execute('''select sum(HR) from babe_ruth_stats ''').fetchall()"
+    "c.execute('''select avg(A)) from babe_ruth_stats ''').fetchall()"
    ]
   },
   {
