Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -547,11 +547,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OperationalError",
+     "evalue": "unrecognized token: \"'career_average \"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-18-2d89399b9010>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'''select avg(AVG) from babe_ruth_stats as 'career_average '''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m: unrecognized token: \"'career_average \""
+     ]
+    }
+   ],
    "source": [
-    "c.execute('''select avg(AVG) from babe_ruth_stats as 'career ave ''').fetchall()"
+    "c.execute('''select avg(AVG) from babe_ruth_stats as career_average ''').fetchall()"
    ]
   },
   {
