Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -579,7 +579,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "pd.DataFrame(c.execute('''select min(HR), * from babe_ruth_stats ''').fetchall())"
    ]
   },
   {
