Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -579,7 +579,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(c.execute('''select count(yearmin(HR), * from babe_ruth_stats ''').fetchall())"
+    "pd.DataFrame(c.execute('''select count(year), sum(, * from babe_ruth_stats ''').fetchall())"
    ]
   },
   {
