Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -630,7 +630,9 @@
     }
    ],
    "source": [
-    "pd.DataFrame(c.execute('''select count(year), sum(hits) from babe_ruth_stats group by team ''').fetchall())"
+    "pd.DataFrame(c.execute('''select count(year), sum(hits) from babe_ruth_stats group by team ''').fetchall())\n",
+    "df.columns = [x[0] for x in c.description]\n",
+    "df"
    ]
   },
   {
