Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -649,7 +649,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "df = pd.DataFrame(c.execute('''select hits+BB from babe_ruth_stats group by team ''').fetchall())\n",
+    "df.columns = [x[0] for x in c.description]\n",
+    "df"
    ]
   },
   {
