Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -649,7 +649,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.DataFrame(c.execute('''select hits+BB as on_base,  from babe_ruth_stats  group by team ''').fetchall())\n",
+    "df = pd.DataFrame(c.execute('''select year, hits+BB as on_base from babe_ruth_stats  group by team ''').fetchall())\n",
     "df.columns = [x[0] for x in c.description]\n",
     "df"
    ]
